k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: my-food-app:latest
          imagePullPolicy: Never
          command: ['sh', '-c', "bash ./init_app.sh"]
          ports:
            - containerPort: 8000
