k8s/api/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
    - port: 8000
  type: LoadBalancer
